     - https://jwildfire.overwhale.com is the JWildfire site
     - https://jwildfire-forum.overwhale.com is the JWildfire-forum
     - (https://mb3d.overwhale.com is the Mandelbulb3D site)
     - (https://flamelet.overwhale.com is the Flamelet site)
     - https://overwhale.com is my main  site
 - made it more visible, when a motion curve/key-frame is associated with a certain flame-parameter
 - changed some default settings in regard to flame-animations
 - numeric fields now also react to inputs of the mousewheel
 - added function to reset all motion curves
 - re-implemented animation-playback in the main editor
 - new settings in the Preferences for animation preview in the main editor: tinaRenderAnimPreviewQuality (render quality) and tinaRenderAnimPreviewSize (size of preview)
 - new setting in the Preferences for default state of the animation-controls in the main editor: tinaDefaultAnimationControlsEnabled (per default: true)
 - renamed the "Misc"-tab into "Randomize", moved the "Randomize weighting-fields"-button to this tab, added also a hint-panel
 - added motion curves for the following flame-parameters: balancingRed/Green/Blue, lowDensityBrightness and foregroundOpacity
 - added new property "tinaDefaultFrameCount" to the Preferences, here you can change the default number of frames for a flame-animation,
   created in the main editor
 - the Quilt-Renderer does ignore the setting of the AI-Post-Denoiser (e.g. OptiX). The current way to denoise such images is to manually denoise the final image
 - new variations:
     -glitchy1 by Brad Stefanov, Rick Sidwell, dark-beam and bezo97
     -pixel_flow by bezo97
     -vortex,
     -dc_vortex,
     -dc_warping by Jesus Sosa
     -post_trig,
     -post_log_tile2 by Whittaker Courtney
 - 20 new variations "SDF" for 3D blur objects, by Jesus Sosa
     -box3D
     -bbox3D
     -rbox3D
     -rhombus3D
     -torus3D
     -ellipsoid3D
     -hexprism3D
     -cylinder3D
     -octogonprism3D
     -ocylinder3D